--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -20,6 +21,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^8.35.0",
     "express": "^4.18.2",
     "tsc-watch": "^6.0.4"
   }
