--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "noImplicitAny": true,
+    "outDir": "./build",
     "noEmitOnError": true,
+    "strict": true
   },
   "include": ["./src/**/*", "./server.ts"]
 }
