--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
     "noImplicitAny": true,
     "outDir": "./build",
     "noEmitOnError": true,
-    "strict": true
+    "strict": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
-  "include": ["./src/**/*", "./server.ts"]
+  "include": [
+    "./src/**/*",
+    "./server.ts"
+  ]
 }
