--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
@@ -21,8 +20,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^8.35.0",
+    "@types/express": "^4.17.18",
     "express": "^4.18.2",
-    "tsc-watch": "^6.0.4"
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "tsc-watch": "^6.0.4",
+    "typeorm": "^0.3.25"
   }
 }
